--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>淘宝网 -淘! 我喜欢</title>
 	<link rel="icon" href="" type=""/>
-	<link rel="stylesheet" href="淘宝.css">
-	<link rel="stylesheet" href="icon/iconfont.css">
+	<link rel="stylesheet" href="./taobao.css">
+	<link rel="stylesheet" href="./icon/iconfont.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -267,14 +267,14 @@
 
 			<div class="content-right">
 				<div class="head-box">
-					<img src="images/头像.jpg" alt="头像" class="head-pic">
+					<img src="./images/头像.jpg" alt="头像" class="head-pic">
 					<div class="Hi">Hi! 你好</div>
 					<div class="gold">
-						<img src="images/图标-1.png" class="signal">
+						<img src="./images/图标-1.png" class="signal">
 						<p class="pick-money">领淘金币抵钱</p>
 					</div>
 					<div class="gold member">
-						<img src="images/图标-2.png" class="signal">
+						<img src="./images/图标-2.png" class="signal">
 						<p class="pick-money">会员俱乐部</p>
 					</div>
 				</div>
@@ -308,51 +308,51 @@
 
 				<div class="functions">
 					<div class="functions-kinds">
-						<img src="images/图标1.png" alt="充话费" class="function-pic">
+						<img src="./images/图标1.png" alt="充话费" class="function-pic">
 						<p class="function-name">充话费</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标3.png" alt="旅行" class="function-pic">
+						<img src="./images/图标3.png" alt="旅行" class="function-pic">
 						<p class="function-name">旅行</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标2.png" alt="车险" class="function-pic">
+						<img src="./images/图标2.png" alt="车险" class="function-pic">
 						<p class="function-name">车险</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标4.png" alt="游戏" class="function-pic">
+						<img src="./images/图标4.png" alt="游戏" class="function-pic">
 						<p class="function-name">游戏</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标5.png" alt="彩票" class="function-pic">
+						<img src="./images/图标5.png" alt="彩票" class="function-pic">
 						<p class="function-name">彩票</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标6.png" alt="电影" class="function-pic">
+						<img src="./images/图标6.png" alt="电影" class="function-pic">
 						<p class="function-name">电影</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标7.png" alt="酒店" class="function-pic">
+						<img src="./images/图标7.png" alt="酒店" class="function-pic">
 						<p class="function-name">酒店</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标8.png" alt="理财" class="function-pic">
+						<img src="./images/图标8.png" alt="理财" class="function-pic">
 						<p class="function-name">理财</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标9.png" alt="找服务" class="function-pic">
+						<img src="./images/图标9.png" alt="找服务" class="function-pic">
 						<p class="function-name">找服务</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标10.png" alt="演出" class="function-pic">
+						<img src="./images/图标10.png" alt="演出" class="function-pic">
 						<p class="function-name">演出</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标11.png" alt="水电煤" class="function-pic">
+						<img src="./images/图标11.png" alt="水电煤" class="function-pic">
 						<p class="function-name">水电煤</p>
 					</div>
 					<div class="functions-kinds">
-						<img src="images/图标12.png" alt="火车票" class="function-pic">
+						<img src="./images/图标12.png" alt="火车票" class="function-pic">
 						<p class="function-name">火车票</p>
 					</div>
 				</div>
@@ -381,7 +381,7 @@
 		</div>
 	</div>
 	
-	<img src="images/wangwang.PNG" class="wang">
+	<img src="./images/wangwang.PNG" class="wang">
 	<div class="fixed">
 		<a href="#" class="square square-first">爱逛好货</a>
 		<a href="#" class="square square2">好店直播</a>
