--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<i class="iconfont icon-xiangji"></i>
 			<input type="text" name="search" value="外套女冬学生 百搭" class="search">
 			<input type="submit" name="search-button" value="搜索" class="button">
-			<img src="./images/二维码.png" class="erweima">
+			<img src="./images/二维码.jpg" class="erweima">
 			<ul class="chooses-ul">
 				<li><a href="#" class="chooses">新款连衣裙</a></li>
 				<li><a href="#" class="chooses">四件套</a></li>
