--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>淘宝网 -淘! 我喜欢</title>
-	<link rel="icon" href="" type=""/>
+	<link rel="icon" href="images/taobao.png">
 	<link rel="stylesheet" href="./taobao.css">
 	<link rel="stylesheet" href="./icon/iconfont.css">
+	<link rel="stylesheet" href="./slideshow.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -231,7 +232,41 @@
 					</div>
 
 					<div class="slide">
-						<img src="https://aecpm.alicdn.com/simba/img/TB183NQapLM8KJjSZFBSutJHVXa.jpg" class="cursor">
+							<div class="wrapper-lunbo">
+								<a href="./detail.html" target="_blank">
+								<ul class="picBox">
+									<li class="first">
+										<img src="./images/pic4.jpg" alt="">
+									</li>
+									<li>
+										<img src="./images/pic2.jpg" alt="">
+									</li>
+									<li>
+										<img src="./images/pic3.jpg" alt="">
+									</li>
+									<li>
+										<img src="./images/pic5.jpg" alt="">
+									</li>
+									<li>
+										<img src="https://aecpm.alicdn.com/simba/img/TB183NQapLM8KJjSZFBSutJHVXa.jpg" alt="">
+									</li>
+								</ul>
+								</a>
+								<div class="btn">
+									<a href="#" class="left">&lt;</a>
+									<a href="#" class="right">&gt;</a>
+								</div>
+								<div class="list">
+									<ul>
+										<li class="active"></li>
+										<li></li>
+										<li></li>
+										<li></li>
+										<li></li>
+									</ul>
+								</div>
+							</div>
+
 						<img src="images/天猫.png" alt="天猫" class="TM-pic">
 						<em class="slogan">理想生活上天猫</em>
 						<em class="page"><span class="red-page">1</span>/6</em>
@@ -392,4 +427,6 @@
 		<a href="#" class="square square-last">暴恐举报</a>
 	</div>
 </body>
+<script src="./jquery-3.3.1.js"></script>
+<script src="./slideshow.js"></script>
 </html>
