--- a/detail.html
+++ b/detail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./icon/iconfont.css">
     <link rel="stylesheet" href="./taobao.css">
 	<link rel="stylesheet" href="./detail.css">
-	<link rel="stylesheet" href="./fangda.css">
+	<!--<link rel="stylesheet" href="./fangda.css">-->
 </head>
 <body>
     <div class="wrapper">
